--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "node-worker-threads-pool": "^1.4.3",
     "poolifier": "^2.0.1",
     "short-unique-id": "^4.4.4"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.6.0"
   }
 }
